--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -138,7 +138,7 @@
   
   <profiles>
     <profile>
-      <id>scala-2.9.2-SNAPSHOT</id>
+      <id>scala-2.9.x</id>
       <repositories>
         <repository>
           <id>scala-refactoring-scalaide-2.0.x</id>
