--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -8,7 +8,7 @@
     <version>1</version>
     <relativePath>../org.scala-ide/pom.xml</relativePath>
   </parent>
-  <version>2.9.2-RC1</version>
+  <version>2.9.2</version>
   <artifactId>scala-toolchain-for-eclipse</artifactId>
   <packaging>pom</packaging>
 
