--- a/org.scala-ide.sbt.full.library/pom.xml
+++ b/org.scala-ide.sbt.full.library/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.scala-ide</groupId>
-    <version>2.9.2-RC1</version>
+    <version>2.9.2</version>
     <artifactId>scala-toolchain-for-eclipse</artifactId>
     <relativePath>../org.scala-ide.build-toolchain/pom.xml</relativePath>
   </parent>
