--- a/org.scala-ide.sdt.debug.tests/pom.xml
+++ b/org.scala-ide.sdt.debug.tests/pom.xml
@@ -119,7 +119,7 @@
             <frameworkExtension>
               <groupId>p2.osgi.bundle</groupId>
               <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
-              <version>1.0.100.v20110502</version>
+              <version>1.0.200.v20120307-1407</version>
             </frameworkExtension>
             <frameworkExtension>
               <groupId>org.scala-ide</groupId>
