Tycho platform cleanup

--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -138,6 +138,8 @@
         <configuration>
           <resolver>p2</resolver>
           <pomDependencies>consider</pomDependencies>
+          <environments combine.self="override">
+          </environments>
         </configuration>
       </plugin>
 
