Updated Equinoxe Weaving Hook version in core.tests and debug.tests POMs
When we updated the AJDT p2 repository we use to build the IDE (SHA:
a50171ac28e5de9f2c39280d0f106361f3f4360a), we forgot to also change the
Equinoxe Weaving Hook version number that is hardcoded in both core.tests and
debug.tests POMs.

We didn't notice this up until now simply because the old Equinoxe Weaving Hook
was cached by maven in the local .m2 repository. Indeed, the build did start to
fail after the maven local cache was deleted.

--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -112,7 +112,7 @@
             <frameworkExtension>
               <groupId>p2.osgi.bundle</groupId>
               <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
-              <version>1.0.100.v20110502</version>
+              <version>1.0.200.I20120427-0800</version>
             </frameworkExtension>
           </frameworkExtensions>
           <bundleStartLevel>
