--- a/org.scala-ide.sdt.core.tests/build.properties
+++ b/org.scala-ide.sdt.core.tests/build.properties
@@ -2,5 +2,5 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
 			   test-workspace/,\
-			   lib/,\
+			   target/lib/,\
                .
