--- a/org.scala-ide.sdt.core/build.properties
+++ b/org.scala-ide.sdt.core/build.properties
@@ -10,5 +10,5 @@ bin.includes = META-INF/,\
                about.ini,\
                about.png,\
                templates/,\
-               lib/,\
+               target/lib/,\
                plugin.properties
