--- a/org.scala-ide.scala.compiler/.classpath
+++ b/org.scala-ide.scala.compiler/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="lib/scala-compiler.jar" sourcepath="lib/scala-compiler-src.jar"/>
+	<classpathentry kind="lib" path="target/classes/lib/scala-compiler.jar"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
