--- a/org.scala-ide.scala.library/pom.xml
+++ b/org.scala-ide.scala.library/pom.xml
@@ -4,186 +4,91 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.scala-ide</groupId>
-    <artifactId>scala-toolchain-for-eclipse</artifactId>
-    <version>2.9.3-SNAPSHOT</version>
+    <artifactId>org.scala-ide.build-toolchain</artifactId>
+    <version>2.1.0-SNAPSHOT</version>
     <relativePath>../org.scala-ide.build-toolchain/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.scala.library</artifactId>
+  <description>Bundle containing the Scala library</description>
   <packaging>bundle</packaging>
+
+  <properties>
+    <!-- some default values, can be overwritten by profiles -->
+    <!-- dirty trick to avoid code duplication -->
+    <scala.library.third-part>scala-dbc</scala.library.third-part>
+  </properties>
 
   <profiles>
     <profile>
-      <id>default-libs</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-library</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-swing</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-dbc</artifactId>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>copy</id>
-                <phase>compile</phase>
-                <goals>
-                  <goal>copy</goal>
-                </goals>
-                <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>org.scala-lang</groupId>
-                      <artifactId>scala-library</artifactId>
-                      <version>${scala.library.version}</version>
-                      <classifier>sources</classifier>
-                      <type>jar</type>
-                      <destFileName>scala-library-src.jar</destFileName>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>org.scala-lang</groupId>
-                      <artifactId>scala-swing</artifactId>
-                      <version>${scala.library.version}</version>
-                      <classifier>sources</classifier>
-                      <type>jar</type>
-                      <destFileName>scala-swing-src.jar</destFileName>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>org.scala-lang</groupId>
-                      <artifactId>scala-dbc</artifactId>
-                      <version>${scala.library.version}</version>
-                      <classifier>sources</classifier>
-                      <type>jar</type>
-                      <destFileName>scala-dbc-src.jar</destFileName>
-                    </artifactItem>
-                  </artifactItems>
-                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
+      <!--- the profile using the default values. Scala 2.9.x -->
+      <id>scala-2.9.x</id>
     </profile>
-
     <profile>
-      <id>scala-trunk</id>
-      <activation>
-        <property>
-          <name>scala.version</name>
-          <value>2.10.0-SNAPSHOT</value>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-library</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-swing</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-actors</artifactId>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>copy</id>
-                <phase>compile</phase>
-                <goals>
-                  <goal>copy</goal>
-                </goals>
-                <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>org.scala-lang</groupId>
-                      <artifactId>scala-actors</artifactId>
-                      <version>${scala.library.version}</version>
-                      <classifier>sources</classifier>
-                      <type>jar</type>
-                      <destFileName>scala-actors-src.jar</destFileName>
-                    </artifactItem>
-                    <!-- This is copy pasted from the default profile, because
-                         only one profile may change the build.plugins configuration
-                         so in the end only one of the profiles' builds are executed
-                         - the one coming last in the file.
-                    -->
-                    <artifactItem>
-                      <groupId>org.scala-lang</groupId>
-                      <artifactId>scala-library</artifactId>
-                      <version>${scala.library.version}</version>
-                      <classifier>sources</classifier>
-                      <type>jar</type>
-                      <destFileName>scala-library-src.jar</destFileName>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>org.scala-lang</groupId>
-                      <artifactId>scala-swing</artifactId>
-                      <version>${scala.library.version}</version>
-                      <classifier>sources</classifier>
-                      <type>jar</type>
-                      <destFileName>scala-swing-src.jar</destFileName>
-                    </artifactItem>
-                  </artifactItems>
-                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
+      <!-- Scala 2.10.x -->
+      <id>scala-2.10.x</id>
+      <properties>
+        <scala.library.third-part>scala-actors</scala.library.third-part>
+      </properties>
     </profile>
-
   </profiles>
 
+  <dependencies>
+    <!-- the 3 parts of scala library -->
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-swing</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>${scala.library.third-part}</artifactId>
+    </dependency>
+  </dependencies>
+
   <build>
-    <outputDirectory>${basedir}</outputDirectory>
     <plugins>
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>2.4.1</version>
-        <configuration>
-          <excludeDefaultDirectories>true</excludeDefaultDirectories>
-          <filesets>
-            <fileset>
-              <directory>./</directory>
-              <includes>
-                <include>META-INF/**/*</include>
-                <include>META-INF</include>
-                <include>lib/**/*</include>
-                <include>lib</include>
-                <include>target/**/*</include>
-                <include>target</include>
-              </includes>
-              <followSymlinks>false</followSymlinks>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
+          <execution>
+            <!-- add the source jars, to be able to attach the source to the Scala container -->
+            <id>copy</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.scala-lang</groupId>
+                  <artifactId>scala-library</artifactId>
+                  <classifier>sources</classifier>
+                  <type>jar</type>
+                  <destFileName>scala-library-src.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.scala-lang</groupId>
+                  <artifactId>scala-swing</artifactId>
+                  <classifier>sources</classifier>
+                  <type>jar</type>
+                  <destFileName>scala-swing-src.jar</destFileName>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.scala-lang</groupId>
+                  <artifactId>${scala.library.third-part}</artifactId>
+                  <classifier>sources</classifier>
+                  <type>jar</type>
+                  <destFileName>${scala.library.third-part}-src.jar</destFileName>
+                </artifactItem>
+              </artifactItems>
+              <outputDirectory>${project.build.directory}/lib</outputDirectory>
+            </configuration>
+          </execution>
+          <!-- extract the library.properties file, to get the osgi.version.number value -->
           <execution>
             <id>unpack</id>
             <phase>initialize</phase>
@@ -204,9 +109,9 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <!-- extract the osgi.version.number value from library.properties -->
+        <groupId>org.kuali.maven.plugins</groupId>
         <artifactId>properties-maven-plugin</artifactId>
-        <version>1.0-alpha-2</version>
         <executions>
           <execution>
             <phase>initialize</phase>
@@ -214,20 +119,18 @@
               <goal>read-project-properties</goal>
             </goals>
             <configuration>
-              <files>
-                <file>${project.build.directory}/library.properties</file>
-              </files>
+              <locations>
+                <location>${project.build.directory}/library.properties</location>
+              </locations>
             </configuration>
           </execution>
         </executions>
       </plugin>
       <plugin>
+        <!-- generate the bundle -->
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.1.0</version>
-        <extensions>true</extensions>
         <configuration>
-          <unpackBundle>true</unpackBundle>
           <instructions>
             <Bundle-SymbolicName>org.scala-ide.scala.library</Bundle-SymbolicName>
             <Bundle-Name>Scala Library for Eclipse</Bundle-Name>
