--- a/org.scala-ide.sdt.aspects/build.properties
+++ b/org.scala-ide.sdt.aspects/build.properties
@@ -1,7 +1,7 @@
 source.. = src/
-output.. = bin/
+output.. = target/classes/
 bin.includes = \
 META-INF/,\
 .,\
 *.exsd,\
-plugin.xml,\
+plugin.xml
