--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -4,32 +4,26 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.scala-ide</groupId>
-    <artifactId>org.scala-ide.build</artifactId>
+    <artifactId>org.scala-ide.sdt.build</artifactId>
     <version>2.1.0-SNAPSHOT</version>
-    <relativePath>../org.scala-ide.build/pom.xml</relativePath>
+    <relativePath>../org.scala-ide.sdt.build/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.sdt.core</artifactId>
   <packaging>eclipse-plugin</packaging>
 
-  <properties>
-    <miglayout.version>3.7.4</miglayout.version>
-    <log4j.version>1.2.16</log4j.version>
-  </properties>
-
   <dependencies>
     <dependency>
-    	<groupId>com.miglayout</groupId>
-    	<artifactId>miglayout</artifactId>
-    	<version>${miglayout.version}</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
+      <groupId>com.miglayout</groupId>
+      <artifactId>miglayout</artifactId>
+      <type>jar</type>
+      <scope>compile</scope>
     </dependency>
     <dependency>
-	  <groupId>log4j</groupId>
-	  <artifactId>log4j</artifactId>
-	  <version>${log4j.version}</version>
-	  <scope>compile</scope>
-	  <exclusions>
+      <!-- log4j without its dependencies -->
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <scope>compile</scope>
+      <exclusions>
         <exclusion>
           <groupId>javax.mail</groupId>
           <artifactId>mail</artifactId>
@@ -53,67 +47,11 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>target-platform-configuration</artifactId>
-        <version>${tycho.version}</version>
-        <configuration>
-          <resolver>p2</resolver>
-          <pomDependencies>consider</pomDependencies>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-compiler-plugin</artifactId>
-        <version>${tycho.version}</version>
-        <configuration>
-          <excludeResources>
-            <excludeResource>**/*.scala</excludeResource>
-          </excludeResources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.14</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <jvmArgs>
-            <jvmArg>-Xms512m</jvmArg>
-            <jvmArg>-Xmx1024m</jvmArg>
-          </jvmArgs>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>2.4.1</version>
-        <configuration>
-          <excludeDefaultDirectories>true</excludeDefaultDirectories>
-          <filesets>
-            <fileset>
-              <directory>./</directory>
-              <includes>
-                <include>lib/**/*</include>
-                <include>lib</include>
-                <include>target/**/*</include>
-                <include>target</include>
-              </includes>
-              <followSymlinks>false</followSymlinks>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.4</version>
         <executions>
-        <execution>
+          <!-- copy the jar dependencies -->
+          <execution>
             <id>copy</id>
             <phase>initialize</phase>
             <goals>
@@ -124,37 +62,24 @@
                 <artifactItem>
                   <groupId>log4j</groupId>
                   <artifactId>log4j</artifactId>
-                  <version>${log4j.version}</version>
-                  <outputDirectory>${basedir}/lib</outputDirectory>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
                 </artifactItem>
-                <artifactItem>
+<!-- TODO: check this -->
+<!-- add it to the source plugin if we really want this, it is likely not working like that -->
+<!--                <artifactItem>
                   <groupId>log4j</groupId>
                   <artifactId>log4j</artifactId>
                   <version>${log4j.version}</version>
-                  <outputDirectory>${basedir}/lib</outputDirectory>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
                   <classifier>sources</classifier>
-                </artifactItem>
+                </artifactItem> -->
                 <artifactItem>
                   <groupId>com.miglayout</groupId>
                   <artifactId>miglayout</artifactId>
-                  <version>${miglayout.version}</version>
-                  <outputDirectory>${basedir}/lib</outputDirectory>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
                 </artifactItem>
               </artifactItems>
             </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
           </execution>
         </executions>
       </plugin>
