--- a/org.scala-ide.sdt.debug.tests/build.properties
+++ b/org.scala-ide.sdt.debug.tests/build.properties
@@ -2,7 +2,6 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                test-workspace/,\
-               lib/,\
-               .,\
-               lib/mockito-all-1.8.5.jar
+               target/lib/,\
+               .,
 source.. = src/
