--- a/org.scala-ide.sdt.debug.tests/pom.xml
+++ b/org.scala-ide.sdt.debug.tests/pom.xml
@@ -2,80 +2,43 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.scala-ide</groupId>
-    <artifactId>org.scala-ide.build</artifactId>
+    <artifactId>org.scala-ide.sdt.build</artifactId>
     <version>2.1.0-SNAPSHOT</version>
-    <relativePath>../org.scala-ide.build/pom.xml</relativePath>
+    <relativePath>../org.scala-ide.sdt.build/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.sdt.debug.tests</artifactId>
   <packaging>eclipse-test-plugin</packaging>
-  
+
   <profiles>
     <profile>
-      <id>Mac OS</id>
+      <!-- Except on MAC OS X, the tools.jar library containing JDI is not available by default.
+           Adding it. -->
+      <id>default-tools.jar</id>
       <activation>
-        <os>
-          <family>mac</family>
-        </os>
+       <file>
+        <exists>${java.home}/../lib/tools.jar</exists>
+       </file>
       </activation>
-      <properties>
-        <tycho.test.OSspecific>-Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.OSspecific>
-      </properties>
-       <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.eclipse.tycho</groupId>
-              <artifactId>tycho-surefire-plugin</artifactId>
-              <version>${tycho.version}</version>
-              <configuration>
-                <dependencies>
-                  <dependency>
-                    <artifactId>org.eclipse.jdt.launching.macosx</artifactId>
-                    <type>eclipse-plugin</type>
-                  </dependency>
-
-                </dependencies>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
+      <dependencies>
+        <dependency>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.5.0</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
+      </dependencies>
     </profile>
-
-    <profile>
-      <activation>
-	<activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-	<tycho.test.OSspecific></tycho.test.OSspecific>
-      </properties>
-    </profile>
-
   </profiles>
-
-  <properties>
-    <!-- Partial workaround against JDT Weaving deadlocks. See #1000317 and the original ticket on https://issuetracker.springsource.com/browse/STS-1445 -->
-    <tycho.test.weaving>-XX:+UnlockDiagnosticVMOptions -XX:+UnsyncloadClass -Dosgi.classloader.lock=classname</tycho.test.weaving>
-    <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dsdtcore.headless ${tycho.test.weaving} ${tycho.test.OSspecific}</tycho.test.jvmArgs>
-  </properties>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.1</version>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>1.8.5</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.scala-ide</groupId>
-      <artifactId>org.scala-ide.sdt.core.tests</artifactId>
-      <version>${project.version}</version>
-      <type>eclipse-plugin</type>
     </dependency>
   </dependencies>
     
@@ -83,9 +46,9 @@
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.0</version>
+         <!-- force run the scala compiler projects before tycho compilation is run -->
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
         <executions>
           <execution>
             <phase>process-resources</phase>
@@ -94,70 +57,21 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <jvmArgs>
-            <jvmArg>-Xms512m</jvmArg>
-            <jvmArg>-Xmx1024m</jvmArg>
-          </jvmArgs>
-        </configuration>
-      </plugin>  
+      </plugin>
       <plugin>
+        <!-- configuration of which test suite to run -->
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-surefire-plugin</artifactId>
-        <version>${tycho.version}</version>
         <configuration>
-          <useUIHarness>false</useUIHarness>
-          <useUIThread>false</useUIThread> 
-
-          <!-- Enable JDT weaving -->
-          <systemProperties combine.children="append">
-            <aj.weaving.verbose>true</aj.weaving.verbose>
-            <org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo>
-            <org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose>
-          </systemProperties>
-          <frameworkExtensions>
-            <frameworkExtension>
-              <groupId>p2.osgi.bundle</groupId>
-              <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
-              <version>1.0.200.I20120427-0800</version>
-            </frameworkExtension>
-            <frameworkExtension>
-              <groupId>org.scala-ide</groupId>
-              <artifactId>org.scala-ide.sdt.core.tests</artifactId>
-              <version>${project.version}</version>
-              <type>eclipse-plugin</type>
-            </frameworkExtension>
-          </frameworkExtensions>
-          <bundleStartLevel>
-            <bundle>
-              <id>org.eclipse.equinox.weaving.aspectj</id>
-              <level>2</level>
-              <autoStart>true</autoStart>
-            </bundle>
-          </bundleStartLevel>
-          <!-- <includes> -->
-          <!--   <include>scala/tools/eclipse/*Test.class</include> -->
-          <!-- </includes> -->
-          <argLine>${tycho.test.jvmArgs}</argLine>
           <testSuite>${project.artifactId}</testSuite>
           <testClass>scala.tools.eclipse.debug.ScalaDebugTestSuite</testClass>
         </configuration>
       </plugin>
 
       <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>target-platform-configuration</artifactId>
-        <version>${tycho.version}</version>
-        <configuration>
-          <resolver>p2</resolver>
-          <pomDependencies>consider</pomDependencies>
-        </configuration>
-      </plugin>
-      
-      <plugin>
+        <!-- copy the mockito jar, so it can be used in eclipse -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.4</version>
         <executions>
         <execution>
             <id>copy</id>
@@ -170,8 +84,7 @@
                 <artifactItem>
                   <groupId>org.mockito</groupId>
                   <artifactId>mockito-all</artifactId>
-                  <version>1.8.5</version>
-                  <outputDirectory>${basedir}/lib</outputDirectory>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
                 </artifactItem>
               </artifactItems>
             </configuration>
