--- a/org.scala-ide.sdt.dev.feature/pom.xml
+++ b/org.scala-ide.sdt.dev.feature/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
@@ -7,6 +8,6 @@
     <version>2.1.0-SNAPSHOT</version>
     <relativePath>../org.scala-ide.sdt.build/pom.xml</relativePath>
   </parent>
-  <artifactId>org.scala-ide.sdt.source.feature</artifactId>
+  <artifactId>org.scala-ide.sdt.dev.feature</artifactId>
   <packaging>eclipse-feature</packaging>
 </project>
