--- a/org.scala-ide.sdt.feature/pom.xml
+++ b/org.scala-ide.sdt.feature/pom.xml
@@ -4,9 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.scala-ide</groupId>
-    <artifactId>org.scala-ide.build</artifactId>
+    <artifactId>org.scala-ide.sdt.build</artifactId>
     <version>2.1.0-SNAPSHOT</version>
-    <relativePath>../org.scala-ide.build/pom.xml</relativePath>
+    <relativePath>../org.scala-ide.sdt.build/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.sdt.feature</artifactId>
   <packaging>eclipse-feature</packaging>
